Changed images to Images

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing=20>
     <tr>
-      <td><img src="images/pepe-with-hat.jpg" alt="Caleb Profile Picture"></td>
+      <td><img src="Images/pepe-with-hat.jpg" alt="Caleb Profile Picture"></td>
       <td>
         <h1>Caleb Harris</h1>
         <p><em> Chief Musclemancer at <strong><a href="https://www.dreamstime.com/apartment-pensioner-who-suffers-compulsive-hoarding-littered-trash-books-living-room-image100854018">your mums house</a></strong></em></p>
