--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </tbody>
   </table>
   <hr>
-  <a href="Contact Details.HTML">Contact-Me</a>
+  <a href="Contact Details.html">Contact-Me</a>
   <a href="Hobbies.html">My Hobbies</a>
   <a href="Inputs.html">Input Dumping Ground</a>
   <a href="HTML challenge.html">HTML Challenge page</a>
